2003-12-12  Michael Herder  <crapsite at gmx.net>
	* backend/artec_eplus48u.c  backend/artec_eplus48u.h
	  backend/artec_eplus48u.conf: added experimental
	  support for the Artec E+ Pro
	  fixed sane-Bugs-300261 (doesn't compile when
	  NDEBUG is defined)

2003-12-09  Allan Noah <anoah at pfeiffer dot edu>
	* doc/desc/{fujitsu|ma1509}.desc: move fujitsu fi-4110eox2 section

2003-12-09  Allan Noah <anoah at pfeiffer dot edu>
	* backend/fujitsu.c: count USB packets to prevent timeouts, perhaps
          due to DATA0/1 toggle problems in certain scanners

2003-12-07  Peter Fales <peter@fales-lorenz.net>
	* acinclude.m4, aclocal.m4, configure:  remove "enabling GPHOTO2"
	  messages printed by configure

2003-12-07  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions/unsupported.desc: Added some scanners.

2003-12-06  Peter Fales <peter@fales-lorenz.net>
	* acinclude.m4, aclocal.m4, configure:  gphoto2 backend is now 
	  enabled by default if gphoto2-config is found.   Use
	  "--with-gphoto2=no" to disable it.

2003-12-06  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* configure configure.in include/sane/config.h.in
	  sanei/sanei_scsi.c: sanei_scsi.c should now compile with the new
	  and old SCSI API of MacOS X. Patch from Mattias Ellert
	  <mattias.ellert@tsl.uu.se>.
	* doc/descriptions/unsupported.desc: Added several scanners.
	* AUTHORS:  Matthew Marjanovic and Marian Eichholz both have CVS
	  access now.
	* sanei/sanei_usb.c: Check for /dev/uscanner* for NetBSD and
	  OpenBSD. Patch from bug tracker #300373.

2003-12-01  Nathan Rutman <nthn1@yahoo.com>

	* backend/canon630u.c: Change default scan size to full platen,
	  removed compiler warnings, made HMG's fix for bug #300257
	  permament.
	* doc/sane-canon630u.man: cleanup
	
2003-12-01  Jochen Eisinger <jochen@penguin-breeder.org>

	* backend/mustek_pp_ccd300.c: Fixed horizontal offset of scan area
	  and scaling for color scans
	
2003-11-27  Karl Heinz Kremer <khk@khk.net>
	